--- a/language/el-GR/el-GR.mod_spoudazo_popup.ini
+++ b/language/el-GR/el-GR.mod_spoudazo_popup.ini
@@ -1,4 +1,8 @@
-MOD_SPOUDAZO_POPUP_TITLE="Spoudazo popup τίτλος"
+MOD_SPOUDAZO_POPUP_TITLE="Καλωσήρθατε στο SpoudaZo.gr"
 MOD_SPOUDAZO_POPUP_DO_NOT_SHOW_AGAIN="Μην το ξαναδείξεις"
-MOD_SPOUDAZO_POPUP_CONGRATULATIONS="Συγχαρητήρια"
-MOD_SPOUDAZO_POPUP_CONTINUE="Συνέχεια"
+MOD_SPOUDAZO_POPUP_CONGRATULATIONS="Ευχαριστούμε"
+MOD_SPOUDAZO_POPUP_CONTINUE="Συνεχίστε στο site"
+MOD_SPOUDAZO_POPUP_EMAIL="Διεύθυνση ηλεκτρονικού ταχυδρομείου"
+MOD_SPOUDAZO_POPUP_SELECT_CITY="Επιλέξτε την πόλη σας"
+MOD_SPOUDAZO_POPUP_OR="Ή"
+MOD_SPOUDAZO_POPUP_REGISTER="Κάντε εγγραφή"
