--- a/language/en-GB/en-GB.mod_spoudazo_popup.ini
+++ b/language/en-GB/en-GB.mod_spoudazo_popup.ini
@@ -1,4 +1,8 @@
 MOD_SPOUDAZO_POPUP_TITLE="Spoudazo popup title"
-MOD_SPOUDAZO_POPUP_DO_NOT_SHOW_AGAIN="Don't show again'"
+MOD_SPOUDAZO_POPUP_DO_NOT_SHOW_AGAIN="Don't show again"
 MOD_SPOUDAZO_POPUP_CONGRATULATIONS="Congratulations"
 MOD_SPOUDAZO_POPUP_CONTINUE="Continue"
+MOD_SPOUDAZO_POPUP_EMAIL="E-mail"
+MOD_SPOUDAZO_POPUP_SELECT_CITY="Select your city"
+MOD_SPOUDAZO_POPUP_OR="Or"
+MOD_SPOUDAZO_POPUP_REGISTER="Register"
