--- a/language/el-GR/el-GR.mod_spoudazo_popup.ini
+++ b/language/el-GR/el-GR.mod_spoudazo_popup.ini
@@ -1,18 +1,19 @@
 MOD_SPOUDAZO_POPUP_TITLE="Καλωσήρθες στο"
-MOD_SPOUDAZO_POPUP_SUBTITLE="Επέλεξε την πόλη που σπουδάζεις για να είσαι ο πρώτος που θα μαθαίνει νέα & προσφορές"
+MOD_SPOUDAZO_POPUP_SUBTITLE="Επέλεξε την πόλη που σπουδάζεις για να βλέπεις τοπικά περιεχόμενα και να λαμβάνεις ενημερώσεις, προσφορές, εκτυπώσεις και δώρα!!!"
 MOD_SPOUDAZO_POPUP_SELECT_CITY="Επέλεξε την πόλη σου"
 MOD_SPOUDAZO_POPUP_SUBMIT="ΕΓΓΡΑΦΗ"
 MOD_SPOUDAZO_POPUP_EULA="Με τη συμμετοχή μου, αποδέχομαι τους Όρους και την Πολιτική Απορρήτου"
-MOD_SPOUDAZO_POPUP_ALREADY_ACCOUNT="Έχεισ ήδη λογαριασμό;"
+MOD_SPOUDAZO_POPUP_ALREADY_ACCOUNT="Έχεις ήδη λογαριασμό;"
 MOD_SPOUDAZO_POPUP_LOGIN="ΣΥΝΔΕΣΗ"
 MOD_SPOUDAZO_POPUP_BECOME_MEMBER="ΓΙΝΕ ΜΕΛΟΣ"
-MOD_SPOUDAZO_POPUP_BECOME_MEMBER_OF="TOY SpoudaZO.gr"
+MOD_SPOUDAZO_POPUP_BECOME_MEMBER_OF="TOY SpoudaZO.gr τώρα!"
 MOD_SPOUDAZO_POPUP_DO_NOT_SHOW_AGAIN="Να μην ξαναεμφανιστεί"
 
 MOD_SPOUDAZO_POPUP_CONGRATULATIONS="Ευχαριστούμε"
-MOD_SPOUDAZO_POPUP_BECOME_MEMBER_2="ΓΙΝΕ ΜΕΛΟΣ ΤΗΣ ΠΑΡΕΑΣ ΤΟΥ SpoudaZO.gr"
+MOD_SPOUDAZO_POPUP_BECOME_MEMBER_2="ΓΙΝΕ ΜΕΛΟΣ ΤΗΣ ΠΑΡΕΑΣ ΤΟΥ SpoudaZO.gr για..."
 MOD_SPOUDAZO_POPUP_BECOME_MEMBER_NOW="ΓΙΝΕ ΜΕΛΟΣ ΤΩΡΑ"
 
 MOD_SPOUDAZO_POPUP_CONTINUE="Συνέχισε στο site"
+MOD_SPOUDAZO_POPUP_OR="ή"
 
 MOD_SPOUDAZO_POPUP_REGISTER="Κάντε εγγραφή"
