--- a/language/el-GR/el-GR.mod_spoudazo_popup.ini
+++ b/language/el-GR/el-GR.mod_spoudazo_popup.ini
@@ -1,5 +1,5 @@
 MOD_SPOUDAZO_POPUP_TITLE="Καλωσήρθες στο"
-MOD_SPOUDAZO_POPUP_SUBTITLE="Επέλεξε την πόλη που σπουδάζεις για να βλέπεις τοπικά περιεχόμενα και να λαμβάνεις ενημερώσεις, προσφορές, εκτυπώσεις και δώρα!!!"
+MOD_SPOUDAZO_POPUP_SUBTITLE="Επέλεξε την πόλη που σπουδάζεις για να βλέπεις τοπικά περιεχόμενα και να λαμβάνεις ενημερώσεις, προσφορές, εκπτώσεις και δώρα!!!"
 MOD_SPOUDAZO_POPUP_SELECT_CITY="Επέλεξε την πόλη σου"
 MOD_SPOUDAZO_POPUP_SUBMIT="ΕΓΓΡΑΦΗ"
 MOD_SPOUDAZO_POPUP_EULA="Με τη συμμετοχή μου, αποδέχομαι τους Όρους και την Πολιτική Απορρήτου"
