--- a/language/el-GR/el-GR.mod_spoudazo_popup.ini
+++ b/language/el-GR/el-GR.mod_spoudazo_popup.ini
@@ -2,7 +2,7 @@ MOD_SPOUDAZO_POPUP_TITLE="Καλωσήρθες στο"
 MOD_SPOUDAZO_POPUP_SUBTITLE="Επέλεξε την πόλη που σπουδάζεις για να βλέπεις τοπικά περιεχόμενα και να λαμβάνεις ενημερώσεις, προσφορές, εκπτώσεις και δώρα!!!"
 MOD_SPOUDAZO_POPUP_SELECT_CITY="Επέλεξε την πόλη σου"
 MOD_SPOUDAZO_POPUP_SUBMIT="ΕΓΓΡΑΦΗ"
-MOD_SPOUDAZO_POPUP_EULA="Με τη συμμετοχή μου, αποδέχομαι τους Όρους και την Πολιτική Απορρήτου"
+MOD_SPOUDAZO_POPUP_EULA="Όροι Χρήσης"
 MOD_SPOUDAZO_POPUP_ALREADY_ACCOUNT="Έχεις ήδη λογαριασμό;"
 MOD_SPOUDAZO_POPUP_LOGIN="ΣΥΝΔΕΣΗ"
 MOD_SPOUDAZO_POPUP_BECOME_MEMBER="ΓΙΝΕ ΜΕΛΟΣ"
