--- a/language/el-GR/el-GR.mod_spoudazo_popup.ini
+++ b/language/el-GR/el-GR.mod_spoudazo_popup.ini
@@ -16,4 +16,8 @@ MOD_SPOUDAZO_POPUP_BECOME_MEMBER_NOW="ΓΙΝΕ ΜΕΛΟΣ ΤΩΡΑ"
 MOD_SPOUDAZO_POPUP_CONTINUE="Συνέχισε στο site"
 MOD_SPOUDAZO_POPUP_OR="ή"
 
+MOD_SPOUDAZO_POPUP_NEWSLETTER_TITLE="Newsletter"
+MOD_SPOUDAZO_POPUP_NEWSLETTER_WELCOME_MESSAGE="Καλωσήρθες %s από %s"
+MOD_SPOUDAZO_POPUP_NEWSLETTER_VISITOR="επισκέπτη"
+
 MOD_SPOUDAZO_POPUP_REGISTER="Κάντε εγγραφή"
