--- a/language/el-GR/el-GR.mod_spoudazo_welcome.ini
+++ b/language/el-GR/el-GR.mod_spoudazo_welcome.ini
@@ -2,4 +2,4 @@ MOD_SPOUDAZO_WELCOME_VISITOR="επισκέπτη"
 MOD_SPOUDAZO_WELCOME_FROM="από"
 MOD_SPOUDAZO_WELCOME_MESSAGE="Καλωσήρθες"
 MOD_SPOUDAZO_WELCOME_SELECT_CITY="Επέλεξε πόλη"
-MOD_SPOUDAZO_WELCOME_USER_MENU="Προφίλ χρήστη"
+MOD_SPOUDAZO_WELCOME_USER_MENU="Μενού χρήστη"
